On a les données Gps maintenant. #2
L'arret de l'acquisition ne fonctionne pas encore. #3

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -16,6 +16,8 @@
         <script type="text/javascript" src="js/app.js"></script>
 
         <!-- Controllers de l'application -->
+        <script type="text/javascript" src="js/controller/Fonctions.js"></script>
+        <script type="text/javascript" src="js/controller/Gps.js"></script>
         <script type="text/javascript" src="js/controller/NavController.js"></script>
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
         <title>Runbelievable</title>
