Création de l'objet session
Création de l'objet session et mise à jour du code sur la liste
d'acquisition, qui dorénavant se trouve dans l'objet session.

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="js/controller/Gps.js"></script>
         <script type="text/javascript" src="js/controller/NavController.js"></script>
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
+        <script type="text/javascript" src="js/controller/Session.js"></script>
 
         <title>Runbelievable</title>
     </head>
