Début de l'ajout des stats d'une session
Ajout d'un nouveau partials et d'un controller pour la page des
statistiques d'une session. Ajout du routing vers cette page et d'un
bouton moche sur la page home pour y acceder.

#20

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -21,6 +21,8 @@
         <script type="text/javascript" src="js/controller/NavController.js"></script>
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
         <script type="text/javascript" src="js/controller/Session.js"></script>
+        <script type="text/javascript" src="js/controller/StatistiquesSessionController.js"></script>
+
 
         <title>Runbelievable</title>
     </head>
