--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -13,7 +13,14 @@
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/angular-route.min.js"></script>
+        <script type="text/javascript"
+               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4rVRKNBxwsQgz6bo8S8CfTwHh7tTx2Xo&sensor=true">
+       </script>
+
         <script type="text/javascript" src="js/app.js"></script>
+
+        
+       
 
         <!-- Controllers de l'application -->
         <script type="text/javascript" src="js/controller/Fonctions.js"></script>
