--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -19,7 +19,10 @@
 
         <script type="text/javascript" src="js/app.js"></script>
 
-        
+        <!-- JS de Raphaeljs pour les graphiques -->
+        <script src="js/raphael/raphael.1.5.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/raphael/g.raphael-min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/raphael/g.line-min.js" type="text/javascript" charset="utf-8"></script> 
        
 
         <!-- Controllers de l'application -->
