Fonctionnalité de retour à l'écran précédent
Faite, manque juste un icone sympa.
#33

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -41,6 +41,8 @@
 
             <!-- Titre -->
             <header class="header">
+            	<!-- Bouton de retour à l'écran précedent -->
+            	<a id="retour" style="display:none">Retour</a>
                 Runbelievable
                 <div id="icone_gps"><i class="fa fa-map-marker"></i></div>
             </header>
