--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -42,7 +42,7 @@
             <!-- Titre -->
             <header class="header">
             	<!-- Bouton de retour à l'écran précedent -->
-            	<a id="retour" style="display:none">Retour</a>
+            	<a  id="retour" href="#" class="fa fa-arrow-circle-o-left" style="display:none; font-size:20px; color:white;" >  </a>  
                 Runbelievable
                 <div id="icone_gps"><i class="fa fa-map-marker"></i></div>
             </header>
