Ajout des imports dans l'index

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -30,6 +30,8 @@
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
         <script type="text/javascript" src="js/controller/Session.js"></script>
         <script type="text/javascript" src="js/controller/StatistiquesSessionController.js"></script>
+        <script type="text/javascript" src="js/controller/SessionPlannifier.js"></script>
+        <script type="text/javascript" src="js/controller/SessionPlannificateurController.js"></script>
 
         <title>Runbelievable</title>
     </head>
