Requête ajax fonctionne.

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -30,8 +30,8 @@
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
         <script type="text/javascript" src="js/controller/Session.js"></script>
         <script type="text/javascript" src="js/controller/StatistiquesSessionController.js"></script>
-        <script type="text/javascript" src="js/controller/SessionPlannifier.js"></script>
-        <script type="text/javascript" src="js/controller/SessionPlannificateurController.js"></script>
+<!--        <script type="text/javascript" src="js/controller/SessionPlannifier.js"></script>
+        <script type="text/javascript" src="js/controller/SessionPlannificateurController.js"></script>-->
 
         <title>Runbelievable</title>
     </head>
@@ -55,7 +55,7 @@
                     <input type="text" class="form-control" name="password" placeholder="Password"/>
                 </p><br/>
                 <p>
-                    <a class="btn btn-primary btn-sm">Se connecter</a>
+                    <a id="log_in" class="btn btn-primary btn-sm">Se connecter</a>
                 </p>
             </div>
             
