--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
         <link href='http://fonts.googleapis.com/css?family=Englebert' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
         <script type="text/javascript" src="lib/jquery/jquery.js"></script>
         <script type="text/javascript" src="lib/angular/angular.min.js"></script>
@@ -60,6 +61,7 @@
                 <div id="connexion_profil">
                     <a class="close" onclick="$(this).parent().fadeOut(500)"><i class="fa fa-times"></i></a>
                     <h3>Connexion</h3>
+                    <div class="alert-danger alert"></div>
                     <p>
                         Vous n'êtes pas connecté à un profil. Connectez-vous à votre profil en ligne
                     </p><br/>
@@ -69,7 +71,7 @@
                     </p><br/>
                     <p>
                         <b>Password</b>
-                        <input type="text" class="form-control" name="password" placeholder="Password"/>
+                        <input type="password" class="form-control" name="password" placeholder="Password"/>
                     </p><br/>
                     <p>
                         <a id="log_in" class="btn btn-primary btn-sm">Se connecter</a>
