--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -50,9 +50,21 @@
             <!-- Menu de Gauche -->
             <div id="menuG">
                 <div class="header">
-                    <a class="pull-left"><i class="fa fa-cog"></i></a>
-                    <a onclick="menu.toggleMenu();" class="pull-right"><i class="fa fa-times"></i></a>
+                    <a class="button pull-left"><i class="fa fa-cog"></i></a>
+                    <a onclick="menu.toggleMenu();" class="button pull-right"><i class="fa fa-times"></i></a>
                 </div>
+                <div class="logo">
+                    <div class="photo"><i class="fa fa-user"></i></div>
+                    <span class="nom">Vous n'êtes pas connecté !</span><br/>
+                    <span class="categorie"></span>
+                </div>
+                <section ng-controller="SessionController">
+                    <div class="title">Sessions</div>
+                    <div class="liens">
+                        <a ng-click="clickAcquisition()" ng-show="gps_actif"><i class="fa fa-exchange"></i> {{texte_bouton_acquisition}}</a>
+                        <a href="#statistiquesSession" ng-show="true"><i class="fa fa-bar-chart-o"></i> Statistiques</a>
+                    </div>
+                </section>
             </div>
 
             <!-- Header mobile -->
