Ajout d'un bouton pour revenir à l'accueil.

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -58,6 +58,10 @@
                     <span class="nom">Vous n'êtes pas connecté !</span><br/>
                     <span class="categorie"></span>
                 </div>
+                <div class="title">Navigation</div>
+                <div class="liens">
+                    <a href="#"><i class="fa fa-home"></i> Accueil</a>
+                </div>
                 <section ng-controller="SessionController">
                     <div class="title">Sessions</div>
                     <div class="liens">
