Début site internet.

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -77,7 +77,7 @@
             <div id="menuD">
                 <div class="scroll">
                     <div class="header">
-                        <a onclick="menu.toggleMenuGauche();" class="button pull-right"><i class="fa fa-times"></i></a>
+                        <a onclick="menu.toggleMenuDroite();" class="button pull-right"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="logo">
                         <div class="photo"><i class="fa fa-cogs"></i></div>
