--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -29,6 +29,7 @@
         <!-- Gestionnaires -->
         <script src="js/gestionnaires/Menu.js" type="text/javascript"></script>
         <script src="js/gestionnaires/Utilisateurs.js" type="text/javascript"></script>
+        <script src="js/gestionnaires/Gps.js" type="text/javascript"></script>
 
         <!-- JS de Raphaeljs pour les graphiques -->
         <script src="lib/raphael/raphael.1.5.2.min.js" type="text/javascript"></script>
@@ -37,7 +38,6 @@
 
         <!-- Controllers de l'application -->
         <script type="text/javascript" src="js/controller/AppController.js"></script>
-        <script type="text/javascript" src="js/controller/Gps.js"></script>
         <script type="text/javascript" src="js/controller/NavController.js"></script>
         <script type="text/javascript" src="js/controller/SessionController.js"></script>
         <script type="text/javascript" src="js/controller/StatistiquesSessionController.js"></script>
@@ -111,23 +111,26 @@
 
             <!-- Connexion au profil -->
             <div id="connexion_profil">
-                <a class="close" onclick="$(this).parent().fadeOut(500)"><i class="fa fa-times"></i></a>
-                <h3>Connexion</h3>
-                <div class="alert-danger alert"></div>
-                <p>
-                    Vous n'êtes pas connecté à un profil. Connectez-vous à votre profil en ligne
-                </p><br/>
-                <p>
-                    <b>Login</b>
-                    <input type="text" class="form-control" name="login" placeholder="Login"/>
-                </p><br/>
-                <p>
-                    <b>Password</b>
-                    <input type="password" class="form-control" name="password" placeholder="Password"/>
-                </p><br/>
-                <p>
-                    <a id="log_in" class="btn btn-primary btn-sm">Se connecter</a>
-                </p>
+                <div class="scroll">
+                    <a class="close" onclick="$(this).closest('#connexion_profil').fadeOut(500)"><i class="fa fa-times"></i></a>
+                    <img alt="logo" src="img/logo.png"/>
+                    <h3>Connexion</h3>
+                    <div class="alert-danger alert"></div>
+                    <p>
+                        Bienvenue dans l'application mobile de sports RunBelievable. Vous n'êtes actuellement pas connecté à votre profil. Si vous n'êtes pas connecté, vous ne profiterez pas de tous les avantages de nos services. Vous ne possédez pas de compte : <a href="http://runbelievable.netai.net/inscription">s'inscrire</a>.
+                    </p><br/>
+                    <p>
+                        <b>Login</b>
+                        <input type="text" class="form-control" name="login" placeholder="Login"/>
+                    </p><br/>
+                    <p>
+                        <b>Password</b>
+                        <input type="password" class="form-control" name="password" placeholder="Password"/>
+                    </p><br/>
+                    <p>
+                        <a id="log_in" class="btn btn-primary btn-sm">Se connecter</a>
+                    </p>
+                </div>
             </div>
 
         </section>
