--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -7,6 +7,7 @@
 
         <!-- Fichier de styles -->
         <link rel="stylesheet" type="text/css" href="css/style2.css?time=59" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
         <link href='http://fonts.googleapis.com/css?family=Englebert' rel='stylesheet' type='text/css'>
@@ -113,7 +114,7 @@
             <div id="connexion_profil">
                 <div class="scroll">
                     <a class="close" onclick="$(this).closest('#connexion_profil').fadeOut(500)"><i class="fa fa-times"></i></a>
-                    <img alt="logo" src="img/logo.png"/>
+                    <img alt="logo" src="img/logo.png" id="logo_connexion"/>
                     <h3>Connexion</h3>
                     <div class="alert-danger alert"></div>
                     <p>
