--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -69,7 +69,7 @@
                         <div class="liens">
                             <a ng-click="clickAcquisition()" ng-show="gps_actif"><i class="fa fa-exchange"></i> {{texte_bouton_acquisition}}</a>
                             <a href="#statistiquesSession" ng-show="true"><i class="fa fa-bar-chart-o"></i> Statistiques de la session</a>
-                            <a href="#listeSessions" ng-show="true"><i class="fa fa-bar-chart-o"></i> Mes session</a>
+                            <a href="#listeSessions" ng-show="true"><i class="fa fa-align-justify "></i> Mes session</a>
                         </div>
                     </section>
                 </div>
