debut session planifier

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -70,6 +70,7 @@
                             <a ng-click="clickAcquisition()" ng-show="gps_actif"><i class="fa fa-exchange"></i> {{texte_bouton_acquisition}}</a>
                             <a href="#statistiquesSession" ng-show="true"><i class="fa fa-bar-chart-o"></i> Statistiques de la session</a>
                             <a href="#listeSessions" ng-show="true"><i class="fa fa-align-justify "></i> Mes session</a>
+                            <a href="#planifierSession" ng-show="true"><i class="fa fa-ticket "></i> Planifier une session</a>
                         </div>
                     </section>
                 </div>
