Adaptation de SessionController a la nouvelle archi + début d'import de Gmaps pour angular #52 #53

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -20,6 +20,8 @@
         <script type="text/javascript"
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4rVRKNBxwsQgz6bo8S8CfTwHh7tTx2Xo&sensor=true">
         </script>
+        <script src='lib/gmaps/underscore-min.js'></script>
+        <script src='lib/gmaps/angular-google-maps.min.js'></script>
 
         <script type="text/javascript" src="js/controller/Routes.js"></script>
 
