--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -54,9 +54,6 @@
             <!-- Menu de Gauche -->
             <div id="menuG">
                 <div class="scroll">
-                    <div class="header">
-                        <a onclick="menu.toggleMenuGauche();" class="button pull-right"><i class="fa fa-times"></i></a>
-                    </div>
                     <div class="logo">
                         <div class="photo"><i class="fa fa-user"></i></div>
                         <span class="nom">{{user.nom}}</span><br/>
@@ -75,15 +72,18 @@
                             <a href="#planifierSession" ng-show="true"><i class="fa fa-ticket "></i> Planifier une session</a>
                         </div>
                     </section>
+                    <div class="title">Profile</div>
+                    <div class="liens">
+                        <a href="#profile" ng-show="true"><i class="fa fa-user"></i> Voir le profil</a>
+                        <a href="#ajusterDonnees" ng-show="true"><i class="fa fa-signal"></i> Ajuster les données</a>
+                        <a href="#ajusterDonnees" ng-show="true"><i class="fa fa-bar-chart-o"></i> Statistiques</a>
+                    </div>
                 </div>
             </div>
 
             <!-- Menu de Droite -->
             <div id="menuD">
                 <div class="scroll">
-                    <div class="header">
-                        <a onclick="menu.toggleMenuDroite();" class="button pull-right"><i class="fa fa-times"></i></a>
-                    </div>
                     <div class="logo">
                         <div class="photo"><i class="fa fa-cogs"></i></div>
                         <span class="nom">Système</span><br/>
