--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -28,6 +28,7 @@
         <!-- Entités -->
         <script src="js/entites/Session.js" type="text/javascript"></script>
         <script src="js/entites/Utilisateur.js" type="text/javascript"></script>
+        <script src="js/entites/InfoApplication.js" type="text/javascript"></script>
 
         <!-- Gestionnaires -->
         <script src="js/gestionnaires/Menu.js" type="text/javascript"></script>
