--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -34,6 +34,8 @@
         <script src="js/gestionnaires/Menu.js" type="text/javascript"></script>
         <script src="js/gestionnaires/Utilisateurs.js" type="text/javascript"></script>
         <script src="js/gestionnaires/Gps.js" type="text/javascript"></script>
+        <script src="js/gestionnaires/Map.js" type="text/javascript"></script>
+
 
 
         <!-- JS de Raphaeljs pour les graphiques -->
