--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -29,6 +29,7 @@
         <script src="js/entites/Session.js" type="text/javascript"></script>
         <script src="js/entites/Utilisateur.js" type="text/javascript"></script>
         <script src="js/entites/InfoApplication.js" type="text/javascript"></script>
+        <script src="js/entites/Pause.js" type="text/javascript"></script>
 
         <!-- Gestionnaires -->
         <script src="js/gestionnaires/Menu.js" type="text/javascript"></script>
