--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -96,22 +96,15 @@
                     </div>
                     <div class="title">État</div>
                     <div class="liens">
-                        <div id="icone_Etat" class="infos"><i class="fa fa-user"></i><label class="label label-info">En pause</label></div>
-                    </div>
-                    <div class="title">Gps</div>
-                    <div class="liens">
+                        <div id="icone_Etat" class="infos">
+                            <i class="fa fa-user"></i><label class="label label-info">En pause</label>
+                        </div>
                         <div id="icone_gps" class="infos">
                             <i class="fa fa-map-marker"></i><label class="label label-warning">En test ...</label>
                         </div>
-                    </div>
-                    <div class="title">Accéléromètre</div>
-                    <div class="liens">
                         <div id="icone_accelerometre" class="infos">
                             <i class="fa fa-mobile"></i><label class="label label-warning">En test ...</label>
                         </div>
-                    </div>
-                    <div class="title">Internet</div>
-                    <div class="liens">
                         <div id="icone_internet" class="infos"><i class="fa fa-cloud"></i><label class="label label-success">Internet activé</label></div>
                     </div>
                     <div class="title">Options</div>
