Ajout de l'alerte lorsque internet/gps/accelerometre est perdu avec une fonction alerte appellable depuis le scope #66 #59

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -149,6 +149,15 @@
                     </p>
                 </div>
             </div>
+
+            <!-- Alerte -->
+            <div id="alerte">
+                <div class="scroll">
+                    <h3 id="titreAlerte"></h3>
+                    <i id="icone" class="fa fa-exclamation-triangle fa-5x "></i><br><br>
+                    <p id="contenuAlerte"></p>
+                </div>
+            </div>
         </section>
     </body>
 </html>
