Chronometre modifié, a maintenant un fonctionnement mytérieux

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -39,6 +39,8 @@
         <script src="library/runbelievable/gestionnaires/Gps.js" type="text/javascript"></script>
         <script src="library/runbelievable/gestionnaires/Accelerometre.js" type="text/javascript"></script>
         <script src="library/runbelievable/gestionnaires/Map.js" type="text/javascript"></script>
+        <script src="library/runbelievable/gestionnaires/Chronometre.js" type="text/javascript"></script>
+
 
         <!-- JS de Raphaeljs pour les graphiques -->
         <script src="library/raphael/raphael.1.5.2.min.js" type="text/javascript"></script>
