--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="ressources/css/style.css" />
         <link rel="stylesheet" type="text/css" href="ressources/css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="ressources/css/font-awesome.css" />
-        <link rel="stylesheet" type="text/css" href="css/notification.css" />
+        <link rel="stylesheet" type="text/css" href="ressources/css/notification.css" />
 
         <!-- Police de caractère -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
@@ -163,6 +163,6 @@
             </div>
         </section>
         
-        <script type="text/javascript" src="phonegap.js"></script>
+        <!--<script type="text/javascript" src="phonegap.js"></script>-->
     </body>
 </html>
